Modif de index.html
Ajout de nouvelles phrases pour la description de l'API

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,20 @@
             <h1>
                 "Bienvenue sur le meilleur site de blague d'Ynov !"
             </h1>
+            <p>Comme vous pouvez le voir, ce site est un site à but humouristique</p>
+            <p>Par conséquent, toutes les fonctionnalités de ce site sont en rapport avec l'humour</p>
+            <br>
+            <p>Vous pouvez donc accéder à des blagues aléatoires, ou bien aux blagues du jour</p>
+            <p>A préciser que la blague du jour se réactualisera tous les jours (c'est logique)</p>
+            <br>
+            <p>Initialement, l'API qui est utilisé permet aussi d'accéder à des vdm "vie de merde", mais ils se trouvent que ces blagues n'étaient pas drôle...</p>
+            <p>J'ai donc décidé de les enlevées de ce site</p>
+            <br>
+            <hr>
+            <hr>
+            <hr>
+            <hr>
+            <br>
             <footer>
                 <div class="container">
                   <div class="row">
