--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <main>
             <img src="../assets/clowns.jpg" class="clown" alt="clown-asset" width="300px" height="200px">
             <h1>
-                "Bienvenue sur le meilleur site de blague d'Ynov !"
+                "Bienvenue sur le meilleur site de blagues d'Ynov !"
             </h1>
             <p>Comme vous pouvez le voir, ce site est un site à but humouristique</p>
             <p>Par conséquent, toutes les fonctionnalités de ce site sont en rapport avec l'humour</p>
